# fastapi-assets

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  tox.ini
.github/workflows/: ci.yaml
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
api-reference/: index.html
custom_validators/: index.html
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  api-reference.md  custom_validators.md  examples.md  getting-started.md  index.md
examples/: index.html
fastapi_assets/core/: __init__.py  base_validator.py  exceptions.py
fastapi_assets/metadata_validators/: __init__.py
fastapi_assets/request_validators/: __init__.py  cookie_validator.py  header_validator.py  path_assert.py  path_validator.py
fastapi_assets/validators/: __init__.py  cookie_validator.py  csv_validator.py  file_validator.py  header_validator.py  image_validator.py  utils.py
getting-started/: index.html
scripts/: test_all_versions.bat  test_all_versions.sh
search/: search_index.json
tests/: __init__.py  test_base_validator.py  test_cookie_validator.py  test_csv_validator.py  test_file_validator.py  test_header_validator.py  test_image_validator.py  test_path_assert.py  test_path_validator.py  test_query_validator.py
